re-aligned form signup button and attempted to correct collapsed margin

--- a/css/main.css
+++ b/css/main.css
@@ -258,7 +258,6 @@ aside span {
 	padding: 15px;
 	margin: 25px 0px 0px;
 	box-shadow: 2px 2px 2px #111;
-	overflow: hidden;
 }
 
 #wrapper_form {
@@ -287,13 +286,11 @@ aside span {
 
 #button_signup {
 	background-image: url(../images/button_signup.png);
-	display: block;
 	width: 63.617021%; /* 299px/470px */
 	height: 59px;
 	color: rgb(255, 255, 255);	
 	text-decoration: none;
 	border-radius: 6px;
-	margin: 0 auto;
 }
 
 #button_signup:hover {
@@ -304,8 +301,11 @@ aside span {
 	color: rgb(68, 83, 148);
 }
 
+#wrapper_rates h2 {
+	text-align: center
+}
+
 table {
-	float; left;
 	width: 50%;
 	border-collapse: collapse;
 	text-align: center;
